Finalized some additional changes on css and kid view. This helped with some layout issues.

--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -85,7 +85,7 @@
 }
 
 .update-card-image {
-    padding-bottom: 2.5%;
+    padding-bottom: 2%;
 }
 
 .navbar-color {
